--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
 
 
-        <receiver android:name=".widget.New_WidgetProvider" >
+        <receiver android:name=".widget.WidgetProvider" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -45,7 +45,7 @@
         </receiver>
 
         <receiver
-            android:name=".widget.New_WidgetReceiver"
+            android:name=".widget.WidgetReceiver"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.example.android.intent.action.NEXT_WIDGET" />
